--- a/Dom/simple-calculator/index.css
+++ b/Dom/simple-calculator/index.css
@@ -6,7 +6,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .container {
@@ -37,6 +37,7 @@ main {
   background-color: rgb(83, 226, 198);
   display: flex;
   justify-content: center;
+  border-radius: 10px;
 }
 
 .btnContainer button {
