--- a/Dom/alert-box/index.css
+++ b/Dom/alert-box/index.css
@@ -26,7 +26,38 @@ h2 {
   background-color: rgb(58, 70, 229);
 }
 
+.alertBoxContainer {
+  display: none;
+  justify-content: center;
+}
+
+.alertBox {
+  background-color: antiquewhite;
+  width: 320px;
+  border: 1px solid black;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 footer {
   text-align: center;
   margin-top: 30px;
+}
+
+.success {
+  background-color: greenyellow;
+}
+
+.danger {
+  background-color: red;
+}
+
+.warning {
+  background-color: orange;
+}
+
+.info {
+  background-color: blue;
 }
